# pkg/handler/events.go
@@ -12,6 +12,16 @@ type EventsResponse struct {
 	Data []domain.Event
 }
 
+// @Summary     Get all
+// @Tags        Events
+// @Description Get all events available for current user
+// @ID          get-all
+// @Accept      json
+// @Produce     json
+// @Success     200     {array}  domain.Event
+// @Failure     400,404 {object} ErrorResponse
+// @Failure     500     {object} ErrorResponse
+// @Router      /api/events/ [get]
 func (h *Handler) GetAll(ctx *gin.Context) {
 	userId, err := h.getUserContext(ctx)
 	if err != nil {
@@ -29,6 +39,18 @@ func (h *Handler) GetAll(ctx *gin.Context) {
 		http.StatusOK, EventsResponse{result},
 	)
 }
+
+// @Summary     Get by Id
+// @Tags        Events
+// @Description Get Event data by defined Id if current User has access to this Event record
+// @ID          get-by-id
+// @Accept      json
+// @Produce     json
+// @Param       id      path     int           true  "Event Id"
+// @Success     200     {object} domain.Event
+// @Failure     400,404 {object} ErrorResponse
+// @Failure     500     {object} ErrorResponse
+// @Router      /api/events/{id} [get]
 func (h *Handler) GetById(ctx *gin.Context) {
 	userId, err := h.getUserContext(ctx)
 	if err != nil {
@@ -49,10 +71,21 @@ func (h *Handler) GetById(ctx *gin.Context) {
 	}
 
 	ctx.JSON(http.StatusOK, result)
-
 }
+
+// @Summary     Create
+// @Tags        Events
+// @Description Create Event record with current User as Organizer
+// @ID          create
+// @Accept      json
+// @Produce     json
+// @Param       input   body     domain.SaveEventRequest true "Request"
+// @Success     201
+// @Failure     400,404 {object} ErrorResponse
+// @Failure     500     {object} ErrorResponse
+// @Router      /api/events/ [post]
 func (h *Handler) Create(ctx *gin.Context) {
-	var request domain.Event
+	var request domain.SaveEventRequest
 
 	if err := ctx.BindJSON(&request); err != nil {
 		NewErrorResponse(ctx, http.StatusBadRequest, "Request is invalid type")
@@ -75,8 +108,20 @@ func (h *Handler) Create(ctx *gin.Context) {
 	})
 }
 
+// @Summary     Update
+// @Tags        Events
+// @Description Update defined Event data if current User has access to this Event record
+// @ID          update
+// @Accept      json
+// @Produce     json
+// @Param       id      path     int                     true "Event Id"
+// @Param       input   body     domain.SaveEventRequest true "Request"
+// @Success     201     {object} domain.Event
+// @Failure     400,404 {object} ErrorResponse
+// @Failure     500     {object} ErrorResponse
+// @Router      /api/events/{id} [post]
 func (h *Handler) Update(ctx *gin.Context) {
-	var request domain.Event
+	var request domain.SaveEventRequest
 
 	if err := ctx.BindJSON(&request); err != nil {
 		NewErrorResponse(ctx, http.StatusBadRequest, "Request is invalid type")
@@ -103,6 +148,18 @@ func (h *Handler) Update(ctx *gin.Context) {
 
 	ctx.JSON(http.StatusCreated, result)
 }
+
+// @Summary     Delete
+// @Tags        Events
+// @Description Delete Event with defined Id if current User has access to this Event record
+// @ID          delete
+// @Accept      json
+// @Produce     json
+// @Param       id      path     int          true "Event Id"
+// @Success     200
+// @Failure     400,404 {object} ErrorResponse
+// @Failure     500     {object} ErrorResponse
+// @Router      /api/events/{id} [delete]
 func (h *Handler) Delete(ctx *gin.Context) {
 	userId, err := h.getUserContext(ctx)
 	if err != nil {
